add: prices to db for plan
